// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<UpLinks /> component > should render the component when there is no uplink 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root makeStyles-MuiPaper-root-MuiCard-root"
      >
        <div
          class="MuiCardContent-root makeStyles-MuiCardContent-root"
        >
          <div
            class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 MuiAlert-root MuiAlert-colorInfo MuiAlert-standardInfo MuiAlert-standard makeStyles-MuiPaper-root-MuiAlert-root"
            role="alert"
          >
            <div
              class="MuiAlert-icon makeStyles-MuiAlert-icon"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit makeStyles-MuiSvgIcon-root"
                data-testid="InfoOutlinedIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M11,9H13V7H11M12,20C7.59,20 4,16.41 4,12C4,7.59 7.59,4 12,4C16.41,4 20,7.59 20, 12C20,16.41 16.41,20 12,20M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10, 10 0 0,0 12,2M11,17H13V11H11V17Z"
                />
              </svg>
            </div>
            <div
              class="MuiAlert-message makeStyles-MuiAlert-message"
            >
              <p
                class="MuiTypography-root MuiTypography-body1 makeStyles-MuiTypography-root"
                data-testid="no-uplinks"
              >
                uplinks.no-items
              </p>
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root makeStyles-MuiPaper-root-MuiCard-root"
    >
      <div
        class="MuiCardContent-root makeStyles-MuiCardContent-root"
      >
        <div
          class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 MuiAlert-root MuiAlert-colorInfo MuiAlert-standardInfo MuiAlert-standard makeStyles-MuiPaper-root-MuiAlert-root"
          role="alert"
        >
          <div
            class="MuiAlert-icon makeStyles-MuiAlert-icon"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit makeStyles-MuiSvgIcon-root"
              data-testid="InfoOutlinedIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M11,9H13V7H11M12,20C7.59,20 4,16.41 4,12C4,7.59 7.59,4 12,4C16.41,4 20,7.59 20, 12C20,16.41 16.41,20 12,20M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10, 10 0 0,0 12,2M11,17H13V11H11V17Z"
              />
            </svg>
          </div>
          <div
            class="MuiAlert-message makeStyles-MuiAlert-message"
          >
            <p
              class="MuiTypography-root MuiTypography-body1 makeStyles-MuiTypography-root"
              data-testid="no-uplinks"
            >
              uplinks.no-items
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`<UpLinks /> component > should render the component with uplinks 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root makeStyles-MuiPaper-root-MuiCard-root"
      >
        <div
          class="MuiCardContent-root makeStyles-MuiCardContent-root"
        >
          <div
            class="MuiBox-root"
            data-testid="uplinks"
          >
            <h6
              class="MuiTypography-root MuiTypography-subtitle1 ebttozw2 makeStyles-MuiTypography-root-StyledText"
            >
              uplinks.title
            </h6>
            <ul
              class="MuiList-root MuiList-padding MuiList-dense makeStyles-MuiList-root"
            >
              <li
                class="MuiListItem-root MuiListItem-dense MuiListItem-gutters MuiListItem-padding version-item makeStyles-MuiListItem-root"
                data-testid="uplink-npmjs"
              >
                <div
                  class="MuiListItemText-root MuiListItemText-dense ebttozw0 makeStyles-MuiListItemText-root-ListItemText"
                >
                  <span
                    class="MuiTypography-root MuiTypography-body2 MuiListItemText-primary makeStyles-MuiTypography-root"
                  >
                    <a
                      class="MuiTypography-root MuiTypography-outline MuiLink-root MuiLink-underlineHover makeStyles-MuiTypography-root-MuiLink-root"
                      href="https://www.npmjs.com/package/verdaccio"
                      rel="noopener noreferrer"
                      target="_blank"
                    >
                      npmjs
                    </a>
                  </span>
                </div>
                <div
                  class="makeStyles-Spacer ebttozw1"
                />
                <div
                  class="MuiListItemText-root MuiListItemText-dense ebttozw0 makeStyles-MuiListItemText-root-ListItemText"
                  title="06/23/2018 6:52:14 PM"
                >
                  <span
                    class="MuiTypography-root MuiTypography-body2 MuiListItemText-primary makeStyles-MuiTypography-root"
                  >
                    6 years ago
                  </span>
                </div>
              </li>
            </ul>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root makeStyles-MuiPaper-root-MuiCard-root"
    >
      <div
        class="MuiCardContent-root makeStyles-MuiCardContent-root"
      >
        <div
          class="MuiBox-root"
          data-testid="uplinks"
        >
          <h6
            class="MuiTypography-root MuiTypography-subtitle1 ebttozw2 makeStyles-MuiTypography-root-StyledText"
          >
            uplinks.title
          </h6>
          <ul
            class="MuiList-root MuiList-padding MuiList-dense makeStyles-MuiList-root"
          >
            <li
              class="MuiListItem-root MuiListItem-dense MuiListItem-gutters MuiListItem-padding version-item makeStyles-MuiListItem-root"
              data-testid="uplink-npmjs"
            >
              <div
                class="MuiListItemText-root MuiListItemText-dense ebttozw0 makeStyles-MuiListItemText-root-ListItemText"
              >
                <span
                  class="MuiTypography-root MuiTypography-body2 MuiListItemText-primary makeStyles-MuiTypography-root"
                >
                  <a
                    class="MuiTypography-root MuiTypography-outline MuiLink-root MuiLink-underlineHover makeStyles-MuiTypography-root-MuiLink-root"
                    href="https://www.npmjs.com/package/verdaccio"
                    rel="noopener noreferrer"
                    target="_blank"
                  >
                    npmjs
                  </a>
                </span>
              </div>
              <div
                class="makeStyles-Spacer ebttozw1"
              />
              <div
                class="MuiListItemText-root MuiListItemText-dense ebttozw0 makeStyles-MuiListItemText-root-ListItemText"
                title="06/23/2018 6:52:14 PM"
              >
                <span
                  class="MuiTypography-root MuiTypography-body2 MuiListItemText-primary makeStyles-MuiTypography-root"
                >
                  6 years ago
                </span>
              </div>
            </li>
          </ul>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
